welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:2: error: '(' expected but identifier found.
  (if a<b && b<c && equalOk == false || a<=b && b<=c && equalOk==true) {
      ^inOrderEqual:5: error: illegal start of simple expression
} 
^